# fast-store

./: README.md  compose.yaml  database.db  main.py  pyproject.toml
protos/: product.proto
services/inventory-service/: Dockerfile  main.py  pyproject.toml
services/order-service/: Dockerfile  main.py  pyproject.toml
services/product-service/: Dockerfile  main.py  product_pb2.py  product_pb2_grpc.py  pyproject.toml
services/user-service/: Dockerfile  auth.py  db.py  main.py  models.py  pyproject.toml
services/user-service/requests/: fast-store-user-add.posting.yaml  health-user-service.posting.yaml
shared/: jwt_utils.py
