[project]
name = "fast-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "pyjwt>=2.12.1",
]

[tool.uv.workspace]
members = [
    "services/user-service",
    "services/product-service",
    "services/order-service",
]
